# SAI

./: .gitignore
Use_Case_II/: README.md  common.py  config.yaml  requirements.txt
Use_Case_II/api/: test_middleware_integration.py
Use_Case_II/loanrisk_project.egg-info/: requires.txt
Use_Case_II/scripts/: ingest_transform.py  portfolio.py  score_price.py  train.py
Use_Case_III/: .gitignore  requirements.txt
Use_Case_III/CreditScorer/: .gitignore  pyproject.toml
Use_Case_III/CreditScorer/api/: database.py  main.py  test_middleware_integration.py  test_single_credit_score.py
Use_Case_III/CreditScorer/api/middleware/: rate_limit_middleware.py
Use_Case_III/CreditScorer/api/models/: models.py
Use_Case_III/CreditScorer/api/router/: auth_router.py  billing_router.py  credit_scoring_router.py  portfolio_optimization_router.py
Use_Case_III/CreditScorer/api/services/: auth_service.py  credit_scoring_service.py  portfolio_optimization_service.py
Use_Case_III/CreditScorer/loanrisk_project/: __init__.py
Use_Case_III/CreditScorer/loanrisk_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Use_Case_III/CreditScorer/loanrisk_project/core/: paths.py
Use_Case_III/CreditScorer/loanrisk_project/data/: transform.py
Use_Case_III/CreditScorer/loanrisk_project/modeling/: registry.py
Use_Case_III/CreditScorer/loanrisk_project/portfolio/: optimizer.py
Use_Case_III/CreditScorer/loanrisk_project/scoring/: scorer.py
Use_Case_III/CreditScorer/loanrisk_project/utils/: __init__.py
Use_Case_III/CreditScorer/scripts/: portfolio.py  score_price.py  train.py
(+57 files in other folders)
