[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loanrisk-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyarrow",
  "pyyaml",
  "h2o",
  "kagglehub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["loanrisk_project*"]
